--- a/packages/grid/table/BaseCell.css
+++ b/packages/grid/table/BaseCell.css
@@ -1,7 +1,7 @@
-.uitkGridBaseCell {
+.uitkTableBaseCell {
 }
 
-.uitkGridBaseCell {
+.uitkTableBaseCell {
   box-sizing: border-box;
   overflow: hidden;
   margin: 0;
@@ -9,46 +9,46 @@
   border-style: none;
   white-space: nowrap;
   position: relative;
-  height: var(--uitkGrid-rowHeight);
-  font-size: var(--uitkGrid-fontSize);
+  height: var(--uitkTable-rowHeight);
+  font-size: var(--uitkTable-fontSize);
   font-weight: normal;
-  z-index: var(--uitkGrid-cell-zIndex);
+  z-index: var(--uitkTable-cell-zIndex);
 }
 
-.uitkGridBaseCell-selectedCell {
-  background-color: var(--uitkGrid-cell-backgroundColor-selected);
+.uitkTableBaseCell-selectedCell {
+  background-color: var(--uitkTable-cell-backgroundColor-selected);
 }
 
-.uitkGridBaseCell-secondary {
-  background-color: var(--uitkGrid-backgroundColor-secondary);
+.uitkTableBaseCell-secondary {
+  background-color: var(--uitkTable-backgroundColor-secondary);
 }
 
-.uitkGridBaseCell-columnDivider {
+.uitkTableBaseCell-columnDivider {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   width: 1px;
-  background-color: var(--uitkGrid-columnDivider-color);
+  background-color: var(--uitkTable-columnDivider-color);
 }
 
-.uitkGridBaseCell-allEditable {
+.uitkTableBaseCell-allEditable {
   border-width: 0 0 1px 1px;
 }
 
-.uitkGridBaseCell-editable {
+.uitkTableBaseCell-editable {
   border-width: 0 1px 1px 2px;
   border-color: #84878e;
 }
 
-.uitkGridBaseCell-valueContainer {
+.uitkTableBaseCell-valueContainer {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: var(--uitkGrid-cell-padding);
+  padding: var(--uitkTable-cell-padding);
   overflow: hidden;
   text-overflow: ellipsis;
-  line-height: var(--uitkGrid-rowHeight);
+  line-height: var(--uitkTable-rowHeight);
 }
