--- a/packages/grid/table/CellMeasure.css
+++ b/packages/grid/table/CellMeasure.css
@@ -1,28 +1,28 @@
-.uitkGridCellMeasure {
+.uitkTableCellMeasure {
   position: fixed;
   top: -1000px;
   left: 0;
 }
 
-.uitkGridCellMeasure table {
+.uitkTableCellMeasure table {
 }
 
-.uitkGridCellMeasure tr {
+.uitkTableCellMeasure tr {
 }
 
-.uitkGridCellMeasure th {
+.uitkTableCellMeasure th {
   box-sizing: border-box;
-  height: var(--uitkGrid-rowHeight);
+  height: var(--uitkTable-rowHeight);
   overflow: hidden;
 
   margin: 0;
-  padding: var(--uitkGrid-cell-padding);
+  padding: var(--uitkTable-cell-padding);
 
   border-style: solid;
   border-color: #d9dde3;
   border-width: 0 0 1px 0;
 
-  font-size: var(--uitkGrid-fontSize);
+  font-size: var(--uitkTable-fontSize);
   font-weight: normal;
 
   background-color: white;
