--- a/packages/grid/table/GroupHeaderCell.css
+++ b/packages/grid/table/GroupHeaderCell.css
@@ -1,54 +1,54 @@
-.uitkGridGroupHeaderCell {
+.uitkTableGroupHeaderCell {
 }
 
-.uitkGridGroupHeaderCell {
+.uitkTableGroupHeaderCell {
   /*border-collapse: collapse;*/
   text-align: left;
-  padding: var(--uitkGrid-cell-padding);
+  padding: var(--uitkTable-cell-padding);
   position: relative;
-  /*background-color: var(--uitkGrid-header-backgroundColor);*/
-  color: var(--uitkGrid-groupHeader-color);
+  /*background-color: var(--uitkTable-header-backgroundColor);*/
+  color: var(--uitkTable-groupHeader-color);
   overflow: hidden;
   white-space: nowrap;
-  height: var(--uitkGrid-rowHeight);
+  height: var(--uitkTable-rowHeight);
 }
 
-.uitkGridGroupHeaderCell-text {
-  font-size: var(--uitkGrid-fontSize);
+.uitkTableGroupHeaderCell-text {
+  font-size: var(--uitkTable-fontSize);
 }
 
-.uitkGridGroupHeaderCell-rowSeparator {
+.uitkTableGroupHeaderCell-rowSeparator {
   position: absolute;
   left: 4px;
   right: 4px;
   bottom: 0;
   height: 1px;
-  background-color: var(--uitkGrid-groupHeaderRowSeparator-color);
+  background-color: var(--uitkTable-groupHeaderRowSeparator-color);
 }
 
-.uitkGridGroupHeaderCell-firstGroupRowSeparator {
+.uitkTableGroupHeaderCell-firstGroupRowSeparator {
   position: absolute;
   left: 0;
   right: 4px;
   bottom: 0;
   height: 1px;
-  background-color: var(--uitkGrid-groupHeaderRowSeparator-color);
+  background-color: var(--uitkTable-groupHeaderRowSeparator-color);
 }
 
-.uitkGridGroupHeaderCell-lastGroupRowSeparator {
+.uitkTableGroupHeaderCell-lastGroupRowSeparator {
   position: absolute;
   left: 4px;
   right: 0;
   bottom: 0;
   height: 1px;
-  background-color: var(--uitkGrid-groupHeaderRowSeparator-color);
+  background-color: var(--uitkTable-groupHeaderRowSeparator-color);
 }
 
-.uitkGridGroupHeaderCell-columnSeparator {
+.uitkTableGroupHeaderCell-columnSeparator {
   position: absolute;
   right: 0;
   top: 4px;
   bottom: 0;
   width: 1px;
-  background-color: var(--uitkGrid-headerColumnSeparator-color);
+  background-color: var(--uitkTable-headerColumnSeparator-color);
 }
