--- a/packages/grid/table/HeaderRow.css
+++ b/packages/grid/table/HeaderRow.css
@@ -1,6 +1,6 @@
-.uitkGridHeaderRow {
+.uitkTableHeaderRow {
   border-style: solid;
-  border-color: var(--uitkGrid-headerRowSeparator-color);
+  border-color: var(--uitkTable-headerRowSeparator-color);
   border-width: 0 0 1px 0;
 
 }
