Css vars renamed

--- a/packages/grid/src/GroupHeaderCell.css
+++ b/packages/grid/src/GroupHeaderCell.css
@@ -3,15 +3,15 @@
 
 .uitkGridGroupHeaderCell {
   text-align: left;
-  padding: var(--uitkGrid-cell-padding);
+  padding: var(--grid-cell-padding);
   position: relative;
-  color: var(--uitkGrid-groupHeader-color);
+  color: var(--grid-groupHeader-color);
   overflow: hidden;
   white-space: nowrap;
 }
 
 .uitkGridGroupHeaderCell-text {
-  font-size: var(--uitkGrid-fontSize);
+  font-size: var(--grid-fontSize);
 }
 
 .uitkGridGroupHeaderCell-rowSeparator {
@@ -20,7 +20,7 @@
   right: 4px;
   bottom: 0;
   height: 1px;
-  background-color: var(--uitkGrid-groupHeaderRowSeparator-color);
+  background-color: var(--grid-groupHeaderRowSeparator-color);
 }
 
 .uitkGridGroupHeaderCell-firstGroupRowSeparator {
@@ -29,7 +29,7 @@
   right: 4px;
   bottom: 0;
   height: 1px;
-  background-color: var(--uitkGrid-groupHeaderRowSeparator-color);
+  background-color: var(--grid-groupHeaderRowSeparator-color);
 }
 
 .uitkGridGroupHeaderCell-lastGroupRowSeparator {
@@ -38,7 +38,7 @@
   right: 0;
   bottom: 0;
   height: 1px;
-  background-color: var(--uitkGrid-groupHeaderRowSeparator-color);
+  background-color: var(--grid-groupHeaderRowSeparator-color);
 }
 
 .uitkGridGroupHeaderCell-columnSeparator {
@@ -47,5 +47,5 @@
   top: 4px;
   bottom: 0;
   width: 1px;
-  background-color: var(--uitkGrid-headerColumnSeparator-color);
+  background-color: var(--grid-headerColumnSeparator-color);
 }
