--- a/packages/grid/src/internal/TopLeftPart.css
+++ b/packages/grid/src/internal/TopLeftPart.css
@@ -6,11 +6,11 @@
 }
 
 .uitkGridTopLeftPart-raised {
-  box-shadow: 6px 0 4px -4px var(--uitkGrid-shadow-color);
+  box-shadow: 6px 0 4px -4px var(--grid-shadow-color);
 }
 
 .uitkGridTopLeftPart table {
   table-layout: fixed;
-  width: var(--uitkGrid-leftWidth);
-  height: var(--uitkGrid-topHeight);
+  width: var(--grid-leftPart-width);
+  height: var(--grid-topPart-height);
 }
