--- a/packages/grid/stories/grid.stories.css
+++ b/packages/grid/stories/grid.stories.css
@@ -22,7 +22,7 @@
 }
 
 .customTreeCell {
-  padding: var(--uitkGrid-cell-padding);
+  padding: var(--grid-cell-padding);
   display: flex;
   flex-direction: row;
   align-items: center;
