--- a/packages/grid/src/BaseCell.css
+++ b/packages/grid/src/BaseCell.css
@@ -5,23 +5,23 @@
   padding: 0;
 
   border-style: solid;
-  border-top-color: var(--row-border-color);
-  border-right-color: var(--column-separator-color);
+  border-top-color: var(--grid-row-borderColor);
+  border-right-color: var(--grid-columnSeparator-color);
   border-width: 1px 1px 0 0;
 
   white-space: nowrap;
   position: relative;
-  font-size: var(--uitkGrid-fontSize);
+  font-size: var(--grid-fontSize);
   font-weight: normal;
-  z-index: var(--uitkGrid-cell-zIndex);
+  z-index: var(--grid-cell-zIndex);
 }
 
 .uitkGridBaseCell-selectedCell {
-  background-color: var(--uitkGrid-cell-backgroundColor-selected);
+  background-color: var(--grid-cell-background-selected);
 }
 
 .uitkGridBaseCell-secondary {
-  background-color: var(--uitkGrid-backgroundColor-secondary);
+  background-color: var(--grid-background-secondary);
 }
 
 .uitkGridBaseCell-valueContainer {
@@ -33,27 +33,27 @@
   box-sizing: border-box;
   overflow: hidden;
   text-overflow: ellipsis;
-  line-height: calc(var(--uitkGrid-rowHeight) - 2px);
+  line-height: calc(var(--grid-row-height) - 2px);
   border-style: solid;
   border-width: 1px;
   border-color: transparent;
-  --uitkGrid-cell-padding: 0 calc(var(--uitkGrid-padding) - 1px);
+  --grid-cell-padding: 0 calc(var(--grid-padding) - 1px);
 }
 
 .uitkGridBaseCell-focused {
   border-style: dotted;
   border-width: 2px;
-  border-color: var(--uitkGrid-cursor-borderColor);
-  line-height: calc(var(--uitkGrid-rowHeight) - 4px);
-  --uitkGrid-cell-padding: 0 calc(var(--uitkGrid-padding) - 2px);
+  border-color: var(--grid-cursor-borderColor);
+  line-height: calc(var(--grid-row-height) - 4px);
+  --grid-cell-padding: 0 calc(var(--grid-padding) - 2px);
 }
 
 .uitkGridBaseCell-editable {
   border-style: solid;
   border-width: 1px;
-  border-color: var(--uitkGrid-editableCell-borderColor);
+  border-color: var(--grid-editableCell-borderColor);
 }
 
 .uitkGridBaseCell-editable:hover {
-  border-color: var(--uitkGrid-editableCell-borderColor-hover);
+  border-color: var(--grid-editableCell-borderColor-hover);
 }
