--- a/packages/grid/src/CellEditor.css
+++ b/packages/grid/src/CellEditor.css
@@ -1,7 +1,7 @@
 .uitkGridCellEditor {
   margin: 0;
   padding: 0;
-  height: var(--uitkGrid-rowHeight);
+  height: var(--grid-row-height);
   overflow: hidden;
   position: relative;
 }
@@ -15,7 +15,7 @@
   box-sizing: border-box;
   border-style: dotted;
   border-width: 2px;
-  border-color: var(--uitkGrid-cursor-borderColor);
+  border-color: var(--grid-cursor-borderColor);
   padding: 0;
 }
 
@@ -27,9 +27,9 @@
   right: 0;
   outline: none;
   border: none;
-  padding: 0 calc(var(--uitkGrid-padding) - 2px);
-  font-size: var(--uitkGrid-fontSize);
+  padding: 0 calc(var(--grid-padding) - 2px);
+  font-size: var(--grid-fontSize);
   font-family: inherit;
-  background-color: var(--uitkGrid-editableCell-background-active);
-  color: var(--uitkGrid-editableCell-color-active);
+  background-color: var(--grid-editableCell-background-active);
+  color: var(--grid-editableCell-color-active);
 }
