--- a/packages/grid/src/Grid.css
+++ b/packages/grid/src/Grid.css
@@ -1,36 +1,36 @@
 .uitk-density-touch {
-  --uitkGrid-rowHeight: 61px;
-  --uitkGrid-padding: 16px;
-  --uitkGrid-fontSize: 16px;
-  --uitkGrid-dividerGap: 20px;
+  --grid-row-height: 61px;
+  --grid-padding: 16px;
+  --grid-fontSize: 16px;
+  --grid-dividerGap: 20px;
 }
 
 .uitk-density-low {
-  --uitkGrid-rowHeight: 49px;
-  --uitkGrid-padding: 12px;
-  --uitkGrid-fontSize: 14px;
-  --uitkGrid-dividerGap: 16px;
+  --grid-row-height: 49px;
+  --grid-padding: 12px;
+  --grid-fontSize: 14px;
+  --grid-dividerGap: 16px;
 }
 
 .uitk-density-medium {
-  --uitkGrid-rowHeight: 37px;
-  --uitkGrid-padding: 8px;
-  --uitkGrid-fontSize: 12px;
-  --uitkGrid-dividerGap: 12px;
+  --grid-row-height: 37px;
+  --grid-padding: 8px;
+  --grid-fontSize: 12px;
+  --grid-dividerGap: 12px;
 }
 
 .uitk-density-high {
-  --uitkGrid-rowHeight: 25px;
-  --uitkGrid-padding: 8px;
-  --uitkGrid-fontSize: 12px;
-  --uitkGrid-dividerGap: 8px;
+  --grid-row-height: 25px;
+  --grid-padding: 8px;
+  --grid-fontSize: 12px;
+  --grid-dividerGap: 8px;
 }
 
 .uitk-density-ultrahigh {
-  --uitkGrid-rowHeight: 21px;
-  --uitkGrid-padding: 4px;
-  --uitkGrid-fontSize: 12px;
-  --uitkGrid-dividerGap: 6px;
+  --grid-row-height: 21px;
+  --grid-padding: 4px;
+  --grid-fontSize: 12px;
+  --grid-dividerGap: 6px;
   /*Checkbox*/
   --checkbox-fontSize: 11px;
   /*CheckboxIcon*/
@@ -179,7 +179,7 @@
 }
 
 .uitkGrid {
-  --uitkGrid-cell-padding: 0 var(--uitkGrid-padding);
+  --grid-cell-padding: 0 var(--grid-padding);
 
   /* --grid- tokens below only defined for ultrahigh density, otherwise use default */
   --uitkControlLabel-right-marginLeft: var(--grid-controlLabel-right-marginLeft, var(--controlLabel-right-marginLeft));
@@ -191,8 +191,8 @@
   --uitkTokenizedInput-last-pill-margin: var(--grid-tokenizedInput-last-pill-margin, var(--tokenizedInput-last-pill-margin));
   --uitkTooltip-icon-top: var(--grid-tooltip-icon-top, var(--tooltip-icon-top));
 
-  --uitkGrid-rowHover-zIndex: 1;
-  --uitkGrid-cell-zIndex: 2;
+  --grid-rowHover-zIndex: 1;
+  --grid-cell-zIndex: 2;
 }
 
 .uitkGrid.backwardsCompat {
@@ -201,69 +201,69 @@
 }
 
 .uitk-light .uitkGrid {
-  --uitkGrid-backgroundColor-primary: var(--uitk-color-white);
-  --uitkGrid-backgroundColor-secondary: var(--uitk-color-grey-20);
-  --uitkGrid-zebraColor: var(--uitk-color-grey-20);
+  --grid-backgroundColor-primary: var(--uitk-color-white);
+  --grid-background-secondary: var(--uitk-color-grey-20);
+  --grid-zebraColor: var(--uitk-color-grey-20);
 
-  --uitkGrid-row-backgroundColor-hover: var(--uitk-color-blue-10);
-  --uitkGrid-row-backgroundColor-selected: var(--uitk-color-blue-30);
+  --grid-row-background-hover: var(--uitk-color-blue-10);
+  --grid-row-background-selected: var(--uitk-color-blue-30);
 
-  --uitkGrid-row-borderColor-selected: var(--uitk-color-blue-500);
-  --uitkGrid-cell-backgroundColor-selected: #64b1e4;
-  --uitkGrid-editableCell-borderColor: var(--uitk-color-grey-100);
-  --uitkGrid-editableCell-borderColor-hover: var(--uitk-color-blue-500);
-  --uitkGrid-editableCell-background-active: var(--uitk-color-white);
-  --uitkGrid-editableCell-color-active: var(--uitk-color-grey-900);
-  /*--uitkGrid-header-borderColor: var(--uitk-color-grey-90);*/
+  --grid-row-borderColor-selected: var(--uitk-color-blue-500);
+  --grid-cell-background-selected: #64b1e4;
+  --grid-editableCell-borderColor: var(--uitk-color-grey-100);
+  --grid-editableCell-borderColor-hover: var(--uitk-color-blue-500);
+  --grid-editableCell-background-active: var(--uitk-color-white);
+  --grid-editableCell-color-active: var(--uitk-color-grey-900);
+  /*--grid-header-borderColor: var(--uitk-color-grey-90);*/
 
-  --uitkGrid-header-color: var(--uitk-color-grey-300);
+  --grid-header-color: var(--uitk-color-grey-300);
 
-  --uitkGrid-headerColumnSeparator-color: rgba(0, 0, 0, 0.1);
-  --uitkGrid-headerRowSeparator-color: rgba(0, 0, 0, 0.3);
-  --uitkGrid-groupHeaderRowSeparator-color: rgba(0, 0, 0, 0.1);
+  --grid-headerColumnSeparator-color: rgba(0, 0, 0, 0.1);
+  --grid-headerRowSeparator-color: rgba(0, 0, 0, 0.3);
+  --grid-groupHeaderRowSeparator-color: rgba(0, 0, 0, 0.1);
 
-  --uitkGrid-groupHeader-color: var(--uitk-color-grey-600);
-  --uitkGrid-shadow-color: rgba(0, 0, 0, 0.2);
-  --uitkGrid-columnDropTarget-color: var(--uitk-color-blue-500);
-  --uitkGrid-cursor-borderColor: #00477b;
-  --uitkGrid-borderColor: var(--uitk-color-grey-90);
+  --grid-groupHeader-color: var(--uitk-color-grey-600);
+  --grid-shadow-color: rgba(0, 0, 0, 0.2);
+  --grid-columnDropTarget-color: var(--uitk-color-blue-500);
+  --grid-cursor-borderColor: #00477b;
+  --grid-borderColor: var(--uitk-color-grey-90);
 
-  --uitkGrid-rowDivider-color: rgba(0, 0, 0, 0.1);
-  --uitkGrid-columnDivider-color: rgba(0, 0, 0, 0.1);
-  --uitkGrid-rowDivider-color-divided: rgba(0, 0, 0, 0.2);
+  --grid-rowDivider-color: rgba(0, 0, 0, 0.1);
+  --grid-columnDivider-color: rgba(0, 0, 0, 0.1);
+  --grid-rowDivider-color-divided: rgba(0, 0, 0, 0.2);
 }
 
 .uitk-dark .uitkGrid {
-  --uitkGrid-backgroundColor-primary: var(--uitk-color-grey-800);
-  --uitkGrid-backgroundColor-secondary: #2f3136;
-  --uitkGrid-zebraColor: rgba(255, 255, 255, 0.05);
+  --grid-backgroundColor-primary: var(--uitk-color-grey-800);
+  --grid-background-secondary: #2f3136;
+  --grid-zebraColor: rgba(255, 255, 255, 0.05);
 
-  --uitkGrid-row-backgroundColor-hover: var(--uitk-color-blue-900);
-  --uitkGrid-row-backgroundColor-selected: var(--uitk-color-blue-800);
+  --grid-row-background-hover: var(--uitk-color-blue-900);
+  --grid-row-background-selected: var(--uitk-color-blue-800);
 
-  --uitkGrid-row-borderColor-selected: var(--uitk-color-blue-300);
-  --uitkGrid-cell-backgroundColor-selected: #64b1e4;
-  --uitkGrid-editableCell-borderColor: var(--uitk-color-grey-200);
-  --uitkGrid-editableCell-borderColor-hover: var(--uitk-color-blue-300);
-  --uitkGrid-editableCell-background-active: var(--uitk-color-grey-800);
-  --uitkGrid-editableCell-color-active: var(--uitk-color-white);
-  /*--uitkGrid-header-borderColor: var(--uitk-color-grey-100);*/
+  --grid-row-borderColor-selected: var(--uitk-color-blue-300);
+  --grid-cell-background-selected: #64b1e4;
+  --grid-editableCell-borderColor: var(--uitk-color-grey-200);
+  --grid-editableCell-borderColor-hover: var(--uitk-color-blue-300);
+  --grid-editableCell-background-active: var(--uitk-color-grey-800);
+  --grid-editableCell-color-active: var(--uitk-color-white);
+  /*--grid-header-borderColor: var(--uitk-color-grey-100);*/
 
-  --uitkGrid-header-color: var(--uitk-color-grey-50);
+  --grid-header-color: var(--uitk-color-grey-50);
 
-  --uitkGrid-headerColumnSeparator-color: rgba(255, 255, 255, 0.1);
-  --uitkGrid-headerRowSeparator-color: rgba(255, 255, 255, 0.3);
-  --uitkGrid-groupHeaderRowSeparator-color: rgba(255, 255, 255, 0.1);
+  --grid-headerColumnSeparator-color: rgba(255, 255, 255, 0.1);
+  --grid-headerRowSeparator-color: rgba(255, 255, 255, 0.3);
+  --grid-groupHeaderRowSeparator-color: rgba(255, 255, 255, 0.1);
 
-  --uitkGrid-groupHeader-color: var(--uitk-color-grey-10);
-  --uitkGrid-shadow-color: rgba(255, 255, 255, 0.4);
-  --uitkGrid-columnDropTarget-color: var(--uitk-color-blue-100);
-  --uitkGrid-cursor-borderColor: #7dc3f2;
-  --uitkGrid-borderColor: var(--uitk-color-grey-100);
+  --grid-groupHeader-color: var(--uitk-color-grey-10);
+  --grid-shadow-color: rgba(255, 255, 255, 0.4);
+  --grid-columnDropTarget-color: var(--uitk-color-blue-100);
+  --grid-cursor-borderColor: #7dc3f2;
+  --grid-borderColor: var(--uitk-color-grey-100);
 
-  --uitkGrid-rowDivider-color: rgba(255, 255, 255, 0.1);
-  --uitkGrid-columnDivider-color: rgba(255, 255, 255, 0.1);
-  --uitkGrid-rowDivider-color-divided: rgba(255, 255, 255, 0.2);
+  --grid-rowDivider-color: rgba(255, 255, 255, 0.1);
+  --grid-columnDivider-color: rgba(255, 255, 255, 0.1);
+  --grid-rowDivider-color-divided: rgba(255, 255, 255, 0.2);
 }
 
 .uitkGrid {
@@ -271,11 +271,11 @@
   /*width: 800px;*/
   position: relative;
   outline: none;
-  --column-separator-color: rgba(0, 0, 0, 0);
+  --grid-columnSeparator-color: rgba(0, 0, 0, 0);
 }
 
 .uitkGrid-columnSeparators {
-  --column-separator-color: var(--uitkGrid-columnDivider-color);
+  --grid-columnSeparator-color: var(--grid-columnDivider-color);
 }
 
 .uitkGrid table {
@@ -284,17 +284,17 @@
 }
 
 .uitkGrid-framed {
-  border: solid 1px var(--uitkGrid-borderColor);
+  border: solid 1px var(--grid-borderColor);
 }
 
 .uitkGrid-primaryBackground {
-  background-color: var(--uitkGrid-backgroundColor-primary);
+  background-color: var(--grid-backgroundColor-primary);
 }
 
 .uitkGrid-secondaryBackground {
-  background-color: var(--uitkGrid-backgroundColor-secondary);
+  background-color: var(--grid-background-secondary);
 }
 
 .uitkGrid.uitkGrid-zebra {
-  --uitkGrid-rowDivider-color: transparent;
+  --grid-rowDivider-color: transparent;
 }
