--- a/packages/grid/src/HeaderCell.css
+++ b/packages/grid/src/HeaderCell.css
@@ -1,17 +1,17 @@
 .uitkGridHeaderCell {
   text-align: left;
-  font-size: var(--uitkGrid-fontSize);
+  font-size: var(--grid-fontSize);
   font-weight: normal;
-  line-height: var(--uitkGrid-rowHeight);
+  line-height: var(--grid-row-height);
   position: relative;
   box-sizing: border-box;
-  color: var(--uitkGrid-header-color);
+  color: var(--grid-header-color);
   white-space: nowrap;
 }
 
 .uitkGridHeaderCell-valueContainer {
-  line-height: var(--uitkGrid-rowHeight);
-  padding: var(--uitkGrid-cell-padding);
+  line-height: var(--grid-row-height);
+  padding: var(--grid-cell-padding);
   position: absolute;
   top: 0;
   right: 0;
@@ -25,7 +25,7 @@
 }
 
 .uitkGridHeaderCell-autosizeContainer {
-  line-height: var(--uitkGrid-rowHeight);
+  line-height: var(--grid-row-height);
   padding: 0;
   position: absolute;
   top: 0;
@@ -38,30 +38,30 @@
 .uitkGridHeaderCell-measuredContent {
   height: 100%;
   display: inline-block;
-  padding: var(--uitkGrid-cell-padding);
+  padding: var(--grid-cell-padding);
 }
 
 .uitkGridHeaderCell-text {
 }
 
 .uitkGridHeaderCell-regularSeparator {
-  background-color: var(--uitkGrid-headerColumnSeparator-color);
+  background-color: var(--grid-headerColumnSeparator-color);
   width: 1px;
   height: auto;
   position: absolute;
   right: 0;
-  top: var(--uitkGrid-dividerGap);
-  bottom: var(--uitkGrid-dividerGap);
+  top: var(--grid-dividerGap);
+  bottom: var(--grid-dividerGap);
 }
 
 .uitkGridHeaderCell-edgeSeparator {
-  background-color: var(--uitkGrid-headerColumnSeparator-color);
+  background-color: var(--grid-headerColumnSeparator-color);
   width: 1px;
   height: auto;
   position: absolute;
   right: 0;
   top: 0;
-  bottom: var(--uitkGrid-dividerGap);
+  bottom: var(--grid-dividerGap);
 }
 
 .uitkGridHeaderCell-resizeHandle {
