--- a/packages/grid/src/internal/FakeCell.css
+++ b/packages/grid/src/internal/FakeCell.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 
   border-style: solid;
-  border-color: var(--row-border-color);
+  border-color: var(--grid-row-borderColor);
   border-width: 1px 0 0 0;
 
   overflow: hidden;
@@ -10,7 +10,7 @@
   padding: 0;
   white-space: nowrap;
   position: relative;
-  font-size: var(--uitkGrid-fontSize);
+  font-size: var(--grid-fontSize);
   font-weight: normal;
-  z-index: var(--uitkGrid-cell-zIndex);
+  z-index: var(--grid-cell-zIndex);
 }
