--- a/packages/grid/src/internal/HeaderRow.css
+++ b/packages/grid/src/internal/HeaderRow.css
@@ -1,9 +1,9 @@
 .uitkGridHeaderRow {
-  height: var(--uitkGrid-rowHeight);
+  height: var(--grid-row-height);
 }
 
 .uitkGridHeaderRow th {
   border-style: solid;
-  border-color: var(--uitkGrid-headerRowSeparator-color);
+  border-color: var(--grid-headerRowSeparator-color);
   border-width: 0 0 1px 0;
 }
