--- a/packages/grid/src/internal/MiddlePart.css
+++ b/packages/grid/src/internal/MiddlePart.css
@@ -3,23 +3,23 @@
   overflow-x: hidden;
   position: absolute;
   top: 0;
-  right: var(--uitkGrid-scrollBarWidth);
-  bottom: var(--uitkGrid-scrollBarHeight);
+  right: var(--grid-scrollBar-width);
+  bottom: var(--grid-scrollBar-height);
   left: 0;
-  clip-path: inset(var(--uitkGrid-topHeight) var(--uitkGrid-rightWidth) 0 var(--uitkGrid-leftWidth));
+  clip-path: inset(var(--grid-topPart-height) var(--grid-rightPart-width) 0 var(--grid-leftPart-width));
 }
 
 .uitkGridMiddlePart-space {
   position: relative;
-  height: var(--uitkGrid-totalHeight);
-  width: var(--uitkGrid-totalWidth);
+  height: var(--grid-total-height);
+  width: var(--grid-total-width);
 }
 
 .uitkGridMiddlePart table {
   table-layout: fixed;
   position: absolute;
 
-  width: var(--uitkGrid-bodyVisibleColumnWidth);
-  top: var(--uitkGrid-bodyVisibleAreaTop);
-  left: var(--uitkGrid-bodyVisibleAreaLeft);
+  width: var(--grid-bodyVisibleColumn-width);
+  top: var(--grid-bodyVisibleArea-top);
+  left: var(--grid-bodyVisibleArea-left);
 }
