--- a/packages/grid/src/internal/RightPart.css
+++ b/packages/grid/src/internal/RightPart.css
@@ -1,28 +1,28 @@
 .uitkGridRightPart {
   position: absolute;
   top: 0;
-  right: var(--uitkGrid-scrollBarWidth);
-  bottom: var(--uitkGrid-scrollBarHeight);
+  right: var(--grid-scrollBar-width);
+  bottom: var(--grid-scrollBar-height);
   overflow-x: hidden;
   overflow-y: hidden;
   z-index: 2;
-  clip-path: inset(var(--uitkGrid-topHeight) 0 0 -10px);
+  clip-path: inset(var(--grid-topPart-height) 0 0 -10px);
 }
 
 .uitkGridRightPart-raised {
-  box-shadow: -6px 0 4px -4px var(--uitkGrid-shadow-color);
+  box-shadow: -6px 0 4px -4px var(--grid-shadow-color);
 }
 
 .uitkGridRightPart-space {
   position: relative;
-  height: var(--uitkGrid-totalHeight);
-  width: var(--uitkGrid-rightWidth);
+  height: var(--grid-total-height);
+  width: var(--grid-rightPart-width);
 }
 
 .uitkGridRightPart table {
   table-layout: fixed;
   position: absolute;
 
-  top: var(--uitkGrid-bodyVisibleAreaTop);
-  width: var(--uitkGrid-rightWidth);
+  top: var(--grid-bodyVisibleArea-top);
+  width: var(--grid-rightPart-width);
 }
