--- a/packages/grid/src/internal/Scrollable.css
+++ b/packages/grid/src/internal/Scrollable.css
@@ -10,6 +10,6 @@
 
 .uitkGridScrollable-space {
   position: relative;
-  height: var(--uitkGrid-totalHeight);
-  width: var(--uitkGrid-totalWidth);
+  height: var(--grid-total-height);
+  width: var(--grid-total-width);
 }
