--- a/packages/grid/src/internal/TopPart.css
+++ b/packages/grid/src/internal/TopPart.css
@@ -2,17 +2,17 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: var(--uitkGrid-scrollBarWidth);
+  right: var(--grid-scrollBar-width);
   overflow-x: hidden;
   overflow-y: hidden;
   z-index: 2;
 
-  clip-path: inset(0 var(--uitkGrid-rightWidth) 0 var(--uitkGrid-leftWidth));
+  clip-path: inset(0 var(--grid-rightPart-width) 0 var(--grid-leftPart-width));
 }
 
 .uitkGridTopPart-space {
-  height: calc(1px + var(--uitkGrid-topHeight));
-  width: var(--uitkGrid-totalWidth);
+  height: calc(1px + var(--grid-topPart-height));
+  width: var(--grid-total-width);
 }
 
 .uitkGridTopPart table {
@@ -20,7 +20,7 @@
   position: absolute;
   top: 0;
 
-  width: var(--uitkGrid-headerVisibleColumnWidth);
-  height: var(--uitkGrid-topHeight);
-  left: var(--uitkGrid-headerVisibleAreaLeft);
+  width: var(--grid-headerVisibleColumn-width);
+  height: var(--grid-topPart-height);
+  left: var(--grid-headerVisibleArea-left);
 }
