--- a/packages/grid/src/internal/TopRightPart.css
+++ b/packages/grid/src/internal/TopRightPart.css
@@ -1,17 +1,17 @@
 .uitkGridTopRightPart {
   position: absolute;
   top: 0;
-  right: var(--uitkGrid-scrollBarWidth);
+  right: var(--grid-scrollBar-width);
   z-index: 2;
 }
 
 .uitkGridTopRightPart-raised {
-  box-shadow: -6px 0 4px -4px var(--uitkGrid-shadow-color);
+  box-shadow: -6px 0 4px -4px var(--grid-shadow-color);
 }
 
 .uitkGridTopRightPart table {
   table-layout: fixed;
 
-  width: var(--uitkGrid-rightWidth);
-  height: var(--uitkGrid-topHeight);
+  width: var(--grid-rightPart-width);
+  height: var(--grid-topPart-height);
 }
