--- a/packages/grid/src/Grid.css
+++ b/packages/grid/src/Grid.css
@@ -271,6 +271,7 @@
   /*width: 800px;*/
   position: relative;
   outline: none;
+  user-select: none;
   --grid-columnSeparator-color: rgba(0, 0, 0, 0);
 }
 
